--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "full-stack-ai-rs-template",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "modern dev",
+    "dev": "concurrently -n fe,api -c blue,green \"rsbuild dev\" \"tsx watch server/index.ts\"",
+    "dev:api": "tsx watch server/index.ts",
     "dev:mock": "tsx mock/mock-server.ts",
-    "build": "modern build",
-    "serve": "modern serve",
-    "start": "modern serve",
+    "build": "rsbuild build",
+    "start": "NODE_ENV=production node --import tsx server/index.ts",
     "test": "rstest --project node",
     "test:browser": "rstest --project browser",
     "test:all": "rstest --project node && rstest --project browser",
@@ -16,15 +17,16 @@
     "test:browser:install": "npx playwright install chromium"
   },
   "dependencies": {
-    "@modern-js/runtime": "3.0.0-alpha.2",
+    "hono": "^4.7.10",
     "openai": "^6.17.0",
     "react": "^19.2.4",
-    "react-dom": "^19.2.4"
+    "react-dom": "^19.2.4",
+    "react-router": "^7.6.1"
   },
   "devDependencies": {
-    "@modern-js/app-tools": "3.0.0-alpha.2",
-    "@modern-js/plugin-bff": "3.0.0-alpha.2",
+    "@hono/node-server": "^1.14.1",
     "@playwright/test": "^1.50.2",
+    "@rsbuild/core": "^1.4.3",
     "@rsbuild/plugin-react": "^1.4.5",
     "@rstest/browser": "^0.8.1",
     "@rstest/browser-react": "^0.8.1",
@@ -32,6 +34,7 @@
     "@types/node": "^25.1.0",
     "@types/react": "^19.2.10",
     "@types/react-dom": "^19.2.3",
+    "concurrently": "^9.1.2",
     "tsx": "^4.20.5",
     "typescript": "^5.9.3"
   }
