--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "lib": ["DOM", "ES2020"],
+    "target": "ES2022",
+    "lib": ["DOM", "ES2022"],
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "jsx": "react-jsx",
@@ -11,10 +11,10 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"],
-      "@api/*": ["api/*"],
+      "@server/*": ["server/*"],
       "@shared/*": ["shared/*"]
     },
     "types": ["@rstest/core/globals"]
   },
-  "include": ["src", "api", "modern.config.ts", "rstest.config.ts"]
+  "include": ["src", "server", "rsbuild.config.ts", "rstest.config.ts"]
 }
